<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">On Time</string>
    <string name="reset_password">Forgot Password</string>
    <string name="sign_up">Dont Have an Account Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email" tools:ignore="DuplicateDefinition">Email</string>
    <string name="logout">Logout</string>
    <string name="time_table">Time Table</string>
    <string name="subjects">Subjects</string>
    <string name="no_hisaab">No Hisaab</string>
    <string name="sign_in_image">Sign In Image</string>
    <string name="browse_image">Browse Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="show_images">Show Images</string>
    <string name="send_link">Send Link</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot  Password?</string>
    <string name="don_t_worry_just_enter_your_registered_email_address_and_we_ll_send_you_the_instructions">Don\'t worry. Just enter your registered email address and we\'ll send you the instructions</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>
    <string name="player_2_0">Player 2: 0</string>
    <string name="reset">Reset</string>
    <string name="player_1_0">Player 1: 0</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="reference">Reference</string>
    <string name="object">Object</string>
    <string name="amount">Amount</string>
    <string name="start_time">Start Time</string>
    <string name="school">School</string>
    <string name="welcome_to_our_app">Welcome to our App</string>
    <string name="this_is_possibly_best_app_to_outfit_your_needs">This is possibly best app to outfit your needs if you are a cgc student</string>
    <string name="clear">Clear</string>
    <string name="rearrange">Rearrange</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="no_task_to_show">No Task To Show</string>
    <string name="profile">Profile</string>
    <string name="get_assignments_notes_syllabus_practicals_and_much_more">Get assignments, notes, syllabus, practicals and much more.</string>
    <string name="material_for_all_semesters_is_available_here">Material for all semesters is available here.</string>
    <string name="no_entry">No Entry</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="you_don_t_have_permissions_for_this_page">You don\'t have permissions for this page.</string>
    <string name="id">Email Id</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="announcement">Announcement</string>
    <string name="tt">TT</string>
    <string name="select_reporter">Select reporter</string>
    <string name="hello">Hello ...</string>
    <string name="create_the_event">Create the Event.</string>


    <string-array name="college_names">
        <item>cgc.coe.edu.in</item>
        <item>cgc.cec.edu.in</item>
    </string-array>

    <string-array name="categories">
        <item>Accounts</item>
        <item>Hostel</item>
    </string-array>


    <string-array name="Hostel">
        <item></item>
        <item>Sadbhavna</item>
        <item>Shantikunj</item>
    </string-array>

    <string-array name="Sadbhavna">
        <item></item>
        <item>Floor</item>
    </string-array>

    <string-array name="Floor">
        <item>Group</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="semesters">Semesters</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="register_user">Register</string>

</resources>
