<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"/>
    <item
        android:id="@+id/Todo"
        android:title="To Do"
        android:icon="@drawable/ic_power_settings_new_black_24dp"/>
    <item
        android:id="@+id/hisaab"
        android:title="Credit"
        android:icon="@drawable/ic_power_settings_new_black_24dp"/>
    <item
        android:id="@+id/fun"
        android:title="Some Fun"
        android:icon="@drawable/ic_power_settings_new_black_24dp"/>
    <item
        android:id="@+id/timeTable"
        android:title="@string/time_table"
        android:icon="@drawable/ic_power_settings_new_black_24dp"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_power_settings_new_black_24dp"/>

</menu>