<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1000">
    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/object"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/object"
        android:layout_weight="300"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="5dp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        tools:ignore="RtlHardcoded" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="700"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp">
        <TextView
            android:id="@+id/deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/start_time"
            android:textColor="#000" />
        <TextView
            android:id="@+id/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp"
            android:text="@string/reference"
            android:textColor="#000"
            />
    </LinearLayout>
</LinearLayout>