<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Notes">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <ImageView
        android:layout_marginTop="100dp"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center" />
    <EditText
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the hint for image"
        android:textColorHint="#a000"
        android:id="@+id/text"/>

    <EditText
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the path"
        android:textColorHint="#a000"
        android:id="@+id/path"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/choose"
        android:text="@string/browse_image"
        android:layout_gravity="center_horizontal"
        android:background="#0079d6"
        android:padding="10dp"
        android:textColor="#ffff"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#0079d6"
        android:padding="10dp"
        android:textColor="#ffff"
        android:id="@+id/upload"
        android:text="@string/upload_image"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_images"
        android:id="@+id/show"
        android:layout_gravity="center_horizontal"
        android:background="#0079d6"
        android:padding="10dp"
        android:textColor="#ffff"
        android:layout_marginTop="20dp"
        />
</LinearLayout>
</ScrollView>