<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/white"
        tools:context=".ui.LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/id"
            android:orientation="horizontal"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText

                android:id="@+id/login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:hint="Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColorHint="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:textColor="@color/black"
                android:paddingBottom="12dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_forgot_password"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:paddingLeft="16dp"
            android:text="@string/forgot_your_password"
            android:textAllCaps="false"
            android:textColor="#CD444444"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:paddingStart="16dp" />


        <TextView
            android:id="@+id/login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password"
            tools:layout_editor_absoluteX="53dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_login_gradient"
            android:onClick="loginUser"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:id="@+id/sign_in_button_with_google"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:layout_marginEnd="24dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:onClick="signInWithGoogle"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/progressBarBlue"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>