<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.akshit.ontime.TicTacToe"
    >

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/text_view_p1"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/player_1_0"

            android:textColor="#1a89fa"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_p2"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1a89fa"


            android:text="@string/player_2_0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="#0079d6"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:text="@string/reset"
             />

    </LinearLayout>
    <!--</RelativeLayout>-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="2.5dp"
        >

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:background="#0079d6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#fff"
            android:layout_margin="2.5dp"
            android:textSize="60sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/button_01"
            android:layout_width="0dp" android:background="#0079d6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2.5dp"
            android:textColor="#fff"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_02"
            android:layout_width="0dp" android:background="#0079d6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#fff"
            android:layout_margin="2.5dp"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:layout_margin="2.5dp">

        <Button
            android:id="@+id/button_10"
            android:layout_margin="2.5dp"
            android:layout_width="0dp" android:background="#0079d6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="60sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/button_11"
            android:layout_margin="2.5dp"
            android:layout_width="0dp" android:background="#0079d6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_12"
            android:layout_margin="2.5dp"
            android:layout_width="0dp" android:background="#0079d6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#fff"
        android:layout_margin="2.5dp">

        <Button
            android:id="@+id/button_20"
            android:layout_margin="2.5dp"
            android:layout_width="0dp" android:background="#0079d6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="60sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/button_21"
            android:layout_margin="2.5dp"
            android:layout_width="0dp" android:background="#0079d6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_22"
            android:layout_margin="5dp"
            android:layout_width="0dp" android:background="#0079d6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="60sp" />

    </LinearLayout>
</LinearLayout>
    <!--<TextView-->
        <!--android:textColor="#1a89fa"-->
        <!--android:textSize="30dp"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Thanks for Playing"/>-->

</LinearLayout>